--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,39 @@
-*.pydevproject
-.metadata
-.gradle
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings/
-.loadpath
+#*.pydevproject
+#.metadata
+#.gradle
+#bin/
+#tmp/
+#*.tmp
+#*.bak
+#*.swp
+#*~.nib
+#local.properties
+#.settings/
+#.loadpath
 
 # Eclipse Core
-.project
+#.project
 
 # External tool builders
-.externalToolBuilders/
+#.externalToolBuilders/
 
 # Locally stored "Eclipse launch configurations"
-*.launch
+#*.launch
 
 # CDT-specific
-.cproject
+#.cproject
 
 # JDT-specific (Eclipse Java Development Tools)
-.classpath
+#.classpath
 
 # Java annotation processor (APT)
-.factorypath
+#.factorypath
 
 # PDT-specific
-.buildpath
+#.buildpath
 
 # sbteclipse plugin
-.target
+#.target
 
 # TeXlipse plugin
-.texlipse
+#.texlipse
